# evolution

./: CLAUDE.md  Dockerfile  README.md  game.py  game_headless.py  game_headless_multiproc.py  grafana_dashboard.json  main.py  neural_network.py  neural_network_sample.py  profile.bat  pyproject.toml  sprite.py  sprite_demo.py  test.py
saved_brains/: best_brain_carnivore.json  best_brain_carnivore_delete.json  best_brain_herbivore.json
