[project]
name = "evolution"
version = "0.1.0"
description = "Neural network-driven evolution simulator"
authors = [
    {name = "Oleksandr Peresunko"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.4.5,<3.0.0)",
    "prometheus-client (>=0.25.0,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
